fix(card): spacing adjustments

--- a/packages/components/src/card/Card.module.css
+++ b/packages/components/src/card/Card.module.css
@@ -18,17 +18,21 @@
 }
 
 .cardContent {
-  padding: 1rem 1rem 1.5rem;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   gap: 0.5rem 1rem;
   flex-grow: 1;
 
   &.horizontal {
-    padding: 0.5rem 1.5rem;
+    padding: 0.5rem 1rem;
     flex-direction: row;
     align-items: center;
-    column-gap: 1.5rem;
+    column-gap: 1rem;
+  }
+
+  + .cardContent {
+    padding-top: 0.5rem;
   }
 }
 
@@ -68,6 +72,10 @@
     @media (forced-colors: active) {
       outline: 2px solid highlight;
     }
+  }
+
+  + .cardContent {
+    padding-top: 0.5rem;
   }
 }
 
